# openarg_backend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose-mcp.yml  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml
.claude/commands/: debug-pipeline.md  new-adapter.md  new-data-connector.md  new-endpoint.md  new-migration.md  new-worker.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  build.yml  e2e.yml  test.yaml  test.yml
config/: curated_sources.json
config/dev/: config.toml
config/local/: config.toml
config/marts/: README.md  demo_energia_pozos.yaml  escuelas_argentina.yaml  legislatura_actividad.yaml  presupuesto_consolidado.yaml  salud_establecimientos.yaml  series_economicas.yaml  staff_estado.yaml
config/prod/: config.toml
config/test/: config.toml
dbt/: .gitignore  README.md  dbt_project.yml  profiles.yml.example
docker/: api.Dockerfile  beat.Dockerfile  mcp.Dockerfile  worker-analyst.Dockerfile  worker-collector.Dockerfile  worker-embedding.Dockerfile  worker-ingest.Dockerfile  worker-s3.Dockerfile  worker-scraper.Dockerfile  worker-transparency.Dockerfile  worker.Dockerfile
docs/: README.md  api-reference.md  architecture.md  backup-restore.md  configuration.md  database-schema.md  deployment.md  diagrams.md  domain-layer.md  infrastructure-layer.md  pipeline-map.md  runbook.md  worker-pipeline.md
scripts/: backup.sh  create_sandbox_role.sql  restore.sh  staging_reset.py
scripts/ci/: validate_curated_sources.py
scripts/diagnostics/: factual_map.py
specs/: FIX_BACKLOG.md  README.md  REVIEW_REPORT_2026-04-10.md  constitution.md
specs/000-architecture/: plan.md  spec.md
specs/001-query-pipeline/: plan.md  spec.md
specs/002-connectors/: spec.md
specs/003-auth/: plan.md  spec.md
specs/004-semantic-cache/: plan.md  spec.md
specs/005-vector-search/: plan.md  spec.md
specs/006-datasets/: plan.md  spec.md
specs/007-public-api/: plan.md  spec.md
specs/008-developers-keys/: plan.md  spec.md
specs/009-monitoring/: plan.md  spec.md
specs/010-sandbox-sql/: plan.md  spec.md
specs/011-table-catalog/: plan.md  spec.md
specs/012-admin/: plan.md  spec.md
specs/013-ingestion-validation/: plan.md  spec.md
specs/014-state-machine/: plan.md  spec.md
specs/015-catalog-resources/: plan.md  spec.md
specs/016-serving-port/: spec.md
specs/017-raw-layer/: spec.md
specs/018-contracts-staging/: spec.md
specs/019-marts/: plan_macro_robustness.md  plan_marts_overhaul.md  spec.md
specs/020-legacy-pipeline-tests-migration/: spec.md
src/app/: __init__.py  run.py
tests/: conftest.py
tests/e2e/: conftest.py  helpers.py  test_e2e_advanced.py  test_e2e_data_exists.py  test_e2e_maps.py  test_e2e_production_v2.py  test_e2e_queries.py  test_e2e_real_users.py
tests/evaluation/: __init__.py  evaluator.py  golden_dataset.json  retrieval_strategy_cases.json  retrieval_strategy_evaluator.py  run_eval.py  run_retrieval_strategy_eval.py  test_evaluator.py  test_retrieval_strategy_evaluator.py  test_retrieval_strategy_live.py
tests/integration/: conftest.py  test_api_health.py  test_health.py  test_mart_invariants.py  test_query_pipeline.py  test_security_integration.py  test_smart_endpoint.py  test_smart_pipeline.py
tests/unit/: test_admin_monitoring_router.py  test_admin_tasks_router.py  test_analyst_prompt_budget.py  test_analyst_scrub.py  test_api_key_service.py  test_argentina_datos_adapter.py  test_background_tasks.py  test_boletin_tasks.py  test_cache_adapter.py  test_cache_key.py  test_cache_reply_confidence.py  test_cache_table_selection.py  test_cached_embedding.py  test_casual_detection.py  test_catalog_backfill.py  test_catalog_connector_seed.py  test_catalog_discovery.py  test_catalog_naming.py  test_celery_startup_bootstrap.py  test_censo2022_ingest.py  test_chart_builder.py  test_circuit_breaker.py  test_citation_guard.py  test_cleanup_raw_orphans.py  test_collect_destination.py  test_collector_hooks.py  test_config.py  test_conversations_confidence.py  (+71 more)
(+368 files in other folders)
